# replace_fonts

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile_dev  Makefile  README.md  apply_theme_fonts.py  create_sendto_shortcut.py  define_theme_fonts.py  font_policy.py  logger.py  pyproject.toml  replace_fonts  replace_fonts.py  replace_fonts_dev  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.bat
.github/workflows/: docker.yml
hooks/: pre-commit
test/: clean.bat  clean.sh  conftest.py  policy.yaml  run.bat  run.sh  run_dev.sh  test_define_theme_fonts.py  test_font_policy.py  test_replace_fonts.py
test/original/: sample1.pptx  sample2.pptx  sample3.pptx  sample4.pptx  sample5.pptx  sample6.pptx
