[project]
name = "replace-fonts"
version = "0.0.0"  # Formal value only; actual version managed in __version__
dependencies = [
    "python-pptx",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ptpython",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import order)
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "S",      # flake8-bandit
    "UP",     # pyupgrade (includes f-string)
    "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",  # Use of assert in tests is expected
    "S108",  # Hardcoded temporary file paths in test patterns
]
